<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    tools:context="com.jnwznkgmail.business.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/main_picture"
                android:id="@+id/imageView"/>
            <TextView
                android:background="#BCAAA4"
                style="@style/nazwa"
                android:text="@string/nazwa_firmy"
                android:id="@+id/name" />
            <TextView
                android:id="@+id/description"
                style="@style/main_text"
                android:layout_below="@id/name"
                android:text="@string/opis"
                />
            <TextView
                android:id="@+id/adres"
                style="@style/text"
                android:layout_below="@id/description"
                android:text="@string/adres"/>
            <ImageView
                android:layout_below="@id/description"
                android:layout_alignStart="@id/adres"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/maps_icon"/>
            <TextView
                style="@style/text"
                android:autoLink="phone"
                android:id="@+id/number"
                android:layout_below="@id/adres"
                android:text="@string/number"/>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/phone_flat"
                android:layout_below="@id/adres"
                android:layout_alignLeft="@id/number"/>
            <TextView
                style="@style/text"
                android:id="@+id/hours"
                android:layout_below="@id/number"
                android:text="@string/godziny_otwarcia"/>
            <ImageView
                android:layout_below="@id/number"
                android:layout_alignLeft="@id/hours"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ikona_godzina"/>
            <TextView
                style="@style/text"
                android:id="@+id/web"
                android:layout_below="@id/hours"
                android:text="@string/web"
                android:autoLink="web"/>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_below="@id/hours"
                android:layout_alignLeft="@id/web"
                android:src="@drawable/web"/>
        </RelativeLayout>
</ScrollView>